fixed minor spacings

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -22,8 +22,11 @@
 
 .title {
   position: absolute;
-  top: 3rem;
-  width: max-content;
+  inset: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100vw;
   z-index: 30;
   color: white;
   font-weight: bolder;
